# aiengineer

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: pipeline.yml
notebooks/testing_smolagents/: agent_memory.py  agent_memory_step.py  hello_world.py  image_generation.py  multiagents.py
src/: design.py  parameters_reactor.py  parameters_safety.py
src/aiengineer/: __init__.py  common.py  config.py  core.py  main.py  prompts.py  testing.py
src/aiengineer/aider_utils/: core.py  engineer_agent.py  llm_edit_repo.py  prompts.py
src/aiengineer/examples/: nuclear_epyr_smolagents.py  nuclear_reactor.py  nuclear_reactor_aider_only.py  nuclear_reactor_smolagents.py
src/aiengineer/smolagents_utils/: agent.py  build_repo_tools.py  llm_edit_repo.py  main_agent.py  prompts.py  tools.py
src/aiengineer/template/: nuclear_reactor.py
src/aiengineer/tools/: call_llm_on_repo.py  engineer_agent.py  llm_edit_repo.py  parse_repository.py
src/aiengineer/utils/: llm_edit_repo.py  parse_repository.py
src/epyr/: __init__.py  cost.py  design.py  doc_thermal_calculations.py  parameters_industrial_applications.py  parameters_materials.py  parameters_thermal_storage.py  simulation_economics.py  simulation_thermal_storage.py  systems_thermal_storage.py  tools_units.py
src/epyr/epyr/: cost.py  design.py  parameters_thermal_storage.py  simulation_economics.py  simulation_efficiency.py  simulation_heat_transfer.py  simulation_thermal_storage.py  systems_containment.py  systems_control.py  systems_heat_exchanger.py  systems_integration.py  systems_thermal_storage.py  tools_units.py
src/reactor/: __init__.py  cost.py  design.py  doc_htgr_calculations.py  doc_neutronics_calcs.py  doc_safety_calcs.py  doc_thermal_calcs.py  parameters_coolant.py  parameters_core.py  parameters_fuel.py  parameters_htgr.py  parameters_modular.py  parameters_reactor.py  parameters_safety.py  parameters_system.py  parameters_thermal.py  simulation_core.py  simulation_fuel.py  simulation_htgr.py  simulation_instrumentation.py  simulation_reactor.py  simulation_safety.py  simulation_seismic.py  simulation_thermal.py  systems_components.py  systems_core.py  systems_htgr.py  systems_instrumentation.py  systems_reactor.py  systems_thermal.py  tools_economics.py  tools_htgr.py  tools_maintenance.py  tools_reliability.py
src/reactor/reactor/: config.py  design.py  main.py  (+21 more)
testing_smolagents/: agent_memory.py  agent_memory_step.py  hello_world.py  image_generation.py  multiagents.py  websearch.py
tests/: test_build_repo_tools.py  test_build_repo_tools_direct_call.py  test_call_llm_on_repo.py  test_llm_edit_repo.py  test_llm_edit_repo_aider.py  test_tools.py  test_tools_simple.py
(+3 files in other folders)
