[project]
name = "aiengineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Azam", email = "azamcharles0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aider-chat",
    "litellm>=1.68.1",
    "pyforge",
    "smolagents[bedrock,gradio]>=1.16.0",
    "aider-chat>=0.83",
    "duckduckgo-search>=8.0.2",
    "selenium>=4.32.0",
    "helium>=5.1.1",
    "pillow>=11.2.1",
    "ipykernel>=6.29.5",
    "markdownify>=1.1.0",
]

[project.scripts]
aiengineer = "aiengineer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = ["huggingface-hub>=0.31.2"]

[tool.uv.sources]
pyforge = { path = "../pyforge", editable = true }
aider-chat = { path = "../aider", editable = true }
smolagents = { path = "../smolagents", editable = true }

